--- a/project/res/layout-sw600dp/section_flight_edit_creditcard.xml
+++ b/project/res/layout-sw600dp/section_flight_edit_creditcard.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/display_credit_card_brand_icon_tablet"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/checkout_data_button_icon_size"
+        android:layout_height="@dimen/checkout_data_button_icon_size"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_tablet_checkout_generic_credit_card"/>
 
