--- a/project/res/layout/fragment_checkout_login_buttons.xml
+++ b/project/res/layout/fragment_checkout_login_buttons.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
@@ -10,14 +9,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="@dimen/tablet_checkout_form_inter_card_gap"
         layout="@layout/include_account_button" />
 
     <include
         android:id="@+id/wallet_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/wallet_button_bottom_margin"
         layout="@layout/include_wallet_button" />
 
 </LinearLayout>
