--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -19,8 +19,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="32dp"
-                android:paddingRight="32dp">
+                android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
+                android:paddingRight="@dimen/tablet_checkout_form_padding_x">
 
                 <!-- TabletCheckoutFormsFragment builds the checkout forms inside here, dynamically -->
 
