--- a/project/res/layout/include_account_button.xml
+++ b/project/res/layout/include_account_button.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/login_failed"
+            android:textSize="@dimen/login_button_text_size"
             android:textColor="@color/text_black" />
     </LinearLayout>
 
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/loading_expedia_account"
+            android:textSize="@dimen/login_button_text_size"
             android:textColor="@color/text_dark" />
 
         <ImageView
