--- a/project/res/layout/include_tablet_coupon_container.xml
+++ b/project/res/layout/include_tablet_coupon_container.xml
@@ -3,17 +3,18 @@
     android:id="@+id/coupon_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="2dp"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/coupon_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/tablet_checkout_coupon_button_gap"
         android:contentDescription="@string/cd_checkout_enter_coupon"
         android:text="@string/coupon_code"
         android:textColor="#FFFFFF"
-        android:textSize="16dp"
+        android:textSize="@dimen/tablet_checkout_coupon_code_text_size"
         android:textStyle="bold" />
 
     <RelativeLayout
@@ -51,7 +52,7 @@
             android:layout_toRightOf="@+id/coupon_tag"
             android:text="@string/coupon_applied"
             android:textColor="#FFFFFF"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -64,7 +65,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="#FFE115"
-            android:textSize="16dp" />
+            android:textSize="@dimen/tablet_checkout_coupon_code_text_size"/>
     </RelativeLayout>
 
 </com.expedia.bookings.widget.LinearLayout>
