--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -34,10 +34,11 @@
 
     <!-- Account / Login button -->
     <dimen name="account_button_margin_top">0dp</dimen>
-    <dimen name="account_button_padding">10dp</dimen>
-    <dimen name="login_button_text_size">18sp</dimen>
+    <dimen name="account_button_padding">6dp</dimen>
+    <dimen name="login_button_text_size">17sp</dimen>
     <dimen name="card_icon_padding_left">0dp</dimen>
-    <dimen name="card_icon_padding">12dp</dimen>
+    <dimen name="card_icon_padding">6dp</dimen>
+    <dimen name="wallet_button_bottom_margin">-2dp</dimen>
 
     <!-- Special dimensions for 7" tablets -->
     <dimen name="receipt_portrait_horizontal_margin">0dp</dimen>
@@ -145,6 +146,22 @@
 
     <!-- Checkout -->
     <dimen name="tablet_checkout_form_autocomplete_width">256dp</dimen>
+    <dimen name="tablet_checkout_form_padding_x">40dp</dimen>
+    <dimen name="tablet_checkout_form_inter_card_gap">8dp</dimen>
+    <dimen name="tablet_checkout_form_group_heading_margin_top">16dp</dimen>
+    <dimen name="tablet_checkout_form_group_heading_margin_bottom">6dp</dimen>
+    <dimen name="tablet_checkout_coupon_button_gap">8dp</dimen>
+    <dimen name="checkout_data_button_icon_size">40dp</dimen>
+    <dimen name="checkout_data_button_text_size">@dimen/login_button_text_size</dimen>
+    <dimen name="tablet_data_button_sub_text_size">14sp</dimen>
+    <dimen name="tablet_checkout_coupon_code_text_size">14sp</dimen>
+    <dimen name="traveler_button_padding">8.5dp</dimen>
+    <dimen name="stored_credit_card_icon_size">40dp</dimen>
+    <dimen name="tablet_checkout_payment_button_image_left_margin">1.5dp</dimen>
+    <dimen name="tablet_checkout_payment_button_image_vertical_margin">-2dp</dimen>
+    <dimen name="tablet_checkout_payment_button_new_cc_left_margin">1.5dp</dimen>
+    <dimen name="data_display_primary_text">@dimen/checkout_data_button_text_size</dimen>
+    <dimen name="stored_credit_card_button_padding">10dp</dimen>
 
     <!-- CVV Screen -->
     <dimen name="cvv_keypad_text_size">30sp</dimen>
