--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -217,6 +217,7 @@
     <!-- Account / Login button -->
     <dimen name="account_button_margin_top">12dp</dimen>
     <dimen name="account_button_padding">0dp</dimen>
+    <dimen name="wallet_button_bottom_margin">8dp</dimen>
 
     <!-- SearchParamsFragment -->
     <dimen name="child_ages_layout_width">500dp</dimen>
@@ -256,6 +257,13 @@
     <!-- Credit card dimens phone -->
     <dimen name="credit_card_checkout_width">318dp</dimen>
     <dimen name="credit_card_checkout_height">219dp</dimen>
+
+    <!-- Checkout -->
+    <dimen name="checkout_data_button_icon_size">48dp</dimen>
+    <dimen name="checkout_data_button_text_size">16sp</dimen>
+    <dimen name="checkout_data_button_sub_text_size">16sp</dimen>
+    <dimen name="stored_credit_card_icon_size">48dp</dimen>
+    <dimen name="stored_credit_card_button_padding">10dp</dimen>
 
     <!-- User review dimens -->
     <dimen name="user_review_text_padding_right">0dp</dimen>
