--- a/project/res/layout/fragment_results_dates.xml
+++ b/project/res/layout/fragment_results_dates.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#FFF">
 
     <TextView
         android:id="@+id/status_text_view"
