2888: Fix up actions on 7-inch confirmation screen
The call support action was being clipped now things share the space
better.

Also center the confirmation in 7inch portrait instead of
center_horizontal

--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -174,5 +174,6 @@
     <!-- confirmation_image_height - (confirmation_checkmark_size/2) -->
     <dimen name="confirmation_checkmark_margin">90dp</dimen>
     <dimen name="confirmation_button_bar_height">48dp</dimen>
+    <dimen name="confirmation_custom_action_textsize">13sp</dimen>
 
 </resources>
