--- a/project/res/layout/include_tablet_confirmation_actions_layout.xml
+++ b/project/res/layout/include_tablet_confirmation_actions_layout.xml
@@ -2,8 +2,8 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <View
-        android:layout_width="wrap_content"
+    <Space
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
@@ -11,27 +11,31 @@
         android:id="@+id/calendar_action_text_view"
         style="@style/Confirmation.Tablet.Action"
         android:drawableLeft="@drawable/ic_tablet_confirmation_calendar"
-        android:text="@string/add_to_calendar"
-        android:textAllCaps="true"
-        app:textStyle="condensed_bold" />
+        android:text="@string/add_to_calendar" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/share_action_text_view"
         style="@style/Confirmation.Tablet.Action"
-        android:drawableLeft="@drawable/ic_tablet_confirmation_share"
-        android:textAllCaps="true"
-        app:textStyle="condensed_bold" />
+        android:drawableLeft="@drawable/ic_tablet_confirmation_share" />
+
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/call_action_text_view"
         style="@style/Confirmation.Tablet.Action"
         android:drawableLeft="@drawable/ic_tablet_confirmation_phone"
-        android:text="@string/tablet_confirmation_call_support"
-        android:textAllCaps="true"
-        app:textStyle="condensed_bold" />
+        android:text="@string/tablet_confirmation_call_support" />
 
-    <View
-        android:layout_width="wrap_content"
+    <Space
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
