--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -98,5 +98,6 @@
     <!-- confirmation_image_height - (confirmation_checkmark_size/2) -->
     <dimen name="confirmation_checkmark_margin">210dp</dimen>
     <dimen name="confirmation_button_bar_height">72dp</dimen>
+    <dimen name="confirmation_custom_action_textsize">15sp</dimen>
 
 </resources>
