--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -144,6 +144,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <View
+            android:id="@+id/traveler_picker_port_white_space"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFF"/>
+
     </com.expedia.bookings.widget.FrameLayoutTouchController>
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
