--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -71,6 +71,8 @@
     <!-- Trip Bucket Fragment -->
     <dimen name="bucket_top_margin">8dp</dimen>
 
+    <dimen name="bucket_card_divider_size">8dp</dimen>
+
     <!-- Centered Captioned icon dimensions, used on the Results screen -->
     <dimen name="centered_captioned_icon_svg_height">55dp</dimen>
     <dimen name="centered_captioned_icon_svg_width">63dp</dimen>
