--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -75,6 +75,10 @@
     <dimen name="trip_bucket_root_layout_padding_top">110dp</dimen>
     <dimen name="trip_bucket_empty_trip_container_padding_top">0dp</dimen>
 
+    <!-- Trip Bucket Fragment -->
+    <dimen name="bucket_top_margin">14dp</dimen>
+    <dimen name="bucket_card_divider_size">20dp</dimen>
+
     <!-- Checkout -->
     <dimen name="tablet_checkout_form_padding_x">32dp</dimen>
     <dimen name="tablet_checkout_form_inter_card_gap">18dp</dimen>
