--- a/project/res/values/integers.xml
+++ b/project/res/values/integers.xml
@@ -12,6 +12,15 @@
     <!-- The maximum credit card number length, according to sources -->
     <integer name="max_credit_card_length">19</integer>
 
+    <!-- The maximum number of days for paging in the future (from now) users can select to search -->
+    <integer name="calendar_max_selectable_date_range">330</integer>
+
+    <!-- The maximum number of days for a hotel stay -->
+    <integer name="calendar_max_days_hotel_stay">28</integer>
+
+    <!-- The maximum days range for a two way flight search -->
+    <integer name="calendar_max_days_flight_search">@integer/calendar_max_selectable_date_range</integer>
+
     <!-- weights -->
     <integer name="animation_duration">300</integer>
     <integer name="left_list_pane_weight">3</integer>
