--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -264,7 +264,7 @@
         <item name="android:paddingBottom">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/sliding_group_text</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13dp</item>
         <item name="textStyle">normal</item>
     </style>
 
