--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -5,6 +5,12 @@
     Overrides for 10" tablet specific dimensions should go in values-sw800dp
     and dimensions for app generic dimensions should go in values -->
 
+    <dimen name="tablet_top_gradient_height">89dp</dimen>
+
+    <!-- Values that L2ImageCache will use for Stack Blur -->
+    <fraction name="stack_blur_darken_multiplier">70%</fraction>
+    <dimen name="stack_blur_radius">50dp</dimen>
+
     <dimen name="tablet_search_width">460dp</dimen>
     <dimen name="tablet_result_corner_radius">2dp</dimen>
     <dimen name="tablet_result_row_primary_text_size">15sp</dimen>
