--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -8,6 +8,10 @@
     <dimen name="match_parent">-1px</dimen>
     <dimen name="wrap_content">-2px</dimen>
 
+    <!-- Values that L2ImageCache will use for Stack Blur -->
+    <fraction name="stack_blur_darken_multiplier">65%</fraction>
+    <dimen name="stack_blur_radius">25dp</dimen>
+
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
     <dimen name="tablet_flight_details_horizontal_padding">24dp</dimen>
