Tablet Results Portrait - hotel details
Bump down the left/right margins and add some top padding for portrait.

--- a/project/res/values-sw600dp-port/dimens.xml
+++ b/project/res/values-sw600dp-port/dimens.xml
@@ -25,4 +25,8 @@
     <!-- Half of results_grid_bottom_half -->
     <fraction name="results_grid_half_bottom_half">30%</fraction>
 
+    <!-- Hotel details -->
+    <dimen name="tablet_hotel_details_top_padding">36dp</dimen>
+    <fraction name="tablet_hotel_details_horizontal_spacing_percentage">8%</fraction>
+
 </resources>
