--- a/project/res/layout/fragment_tablet_results_hotels.xml
+++ b/project/res/layout/fragment_tablet_results_hotels.xml
@@ -25,10 +25,11 @@
         android:background="@color/map_dimmer" />
 
     <View
+        android:id="@+id/action_bar_background"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/results_top_gradient_height"
+        android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@drawable/bg_tablet_actionbar"/>
+        android:background="@drawable/ab_gradient_results_hotels_mode"/>
 
     <!-- FORGROUND CONTAINERS -->
 
