--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.FrameLayoutTouchController
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +9,14 @@
     <FrameLayout
         android:id="@+id/blurred_dest_image_overlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:foreground="#802f2433"/>
+        android:layout_height="match_parent"/>
+
+    <View
+        android:id="@+id/action_bar_background"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:background="@drawable/ab_gradient"/>
 
     <LinearLayout
         android:id="@+id/bucket_showing_root"
