--- a/project/res/layout/fragment_hotel_filtered_count.xml
+++ b/project/res/layout/fragment_hotel_filtered_count.xml
@@ -1,9 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#80000000" >
+    android:layout_height="match_parent">
 
     <com.expedia.bookings.widget.RingedCountView
         android:id="@+id/ring"
