--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -80,6 +80,8 @@
     <dimen name="bucket_card_divider_size">20dp</dimen>
 
     <!-- Checkout -->
+    <dimen name="slide_to_purchase_container_height">200dp</dimen>
+    <dimen name="slide_to_purchase_widget_margin_top">15dp</dimen>
     <dimen name="tablet_checkout_form_padding_x">32dp</dimen>
     <dimen name="tablet_checkout_form_inter_card_gap">18dp</dimen>
     <dimen name="tablet_checkout_form_group_heading_margin_top">32dp</dimen>
