--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -71,34 +71,16 @@
         tools:ignore="NewApi">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            style="@style/V2.Widget.LinearLayout.TabletSearchControls">
 
             <com.mobiata.android.widget.AutoResizeTextView
                 android:id="@+id/dest_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="22dp"
-                app:minTextSize="14dp"
-                android:textColor="#FFFFFF"
-                android:gravity="center_vertical"
-                android:layout_margin="8dp"
-                android:drawablePadding="8dp"
-                android:layout_gravity="center_vertical|left"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:drawableLeft="@drawable/ic_action_bar_magnifying_glass" />
+                style="@style/V2.Widget.TextView.TabletSearchDestination" />
 
 
             <LinearLayout
                 android:id="@+id/right_buttons_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_weight="0"
-                android:layout_gravity="center_vertical|right">
+                style="@style/V2.Widget.LinearLayout.TabletSearchRightButtonsContainer">
 
                 <TextView
                     android:id="@+id/origin_btn"
