Don't show dates textview if we're on 7".

--- a/project/res/values-sw800dp/bools.xml
+++ b/project/res/values-sw800dp/bools.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <bool name="show_now_booking_heading">true</bool>
+    <bool name="show_tripbucket_date">true</bool>
 
 </resources>
