--- a/project/res/values-sw600dp/bools.xml
+++ b/project/res/values-sw600dp/bools.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <bool name="show_now_booking_heading">false</bool>
+    <bool name="show_tripbucket_date">false</bool>
 
 </resources>
