--- a/project/res/layout/include_flight_details_baggage_fees.xml
+++ b/project/res/layout/include_flight_details_baggage_fees.xml
@@ -11,7 +11,8 @@
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/cd_flight_leg_baggage_fee_info"
         android:gravity="left|center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?android:attr/selectableItemBackground">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/fees_text_view"
