--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -11,7 +11,12 @@
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg_dest_image_overlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/bg_blurry_dest_image_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <!-- FLIGHT LIST PLACEHOLDER FOR WHEN WE DONT HAVE ENOUGH FLIGHT DATA -->
 
