--- a/project/res/values-sw800dp-port/dimens.xml
+++ b/project/res/values-sw800dp-port/dimens.xml
@@ -3,4 +3,8 @@
 
     <dimen name="hotel_checkout_overview_width">@dimen/standard_content_width</dimen>
 
+    <!-- Trip Bucket -->
+    <dimen name="hotel_flight_card_width">335dp</dimen>
+    <dimen name="trip_bucket_undo_bar_width">335dp</dimen>
+
 </resources>
