Address concerns with dimensions' homes.

--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -76,6 +76,10 @@
 
     <dimen name="bucket_card_divider_size">8dp</dimen>
 
+    <dimen name="results_bucket_y_padding">16dp</dimen>
+    <dimen name="results_bucket_header_padding">16dp</dimen>
+    <dimen name="results_bucket_item_padding">14dp</dimen>
+
     <!-- Centered Captioned icon dimensions, used on the Results screen -->
     <dimen name="centered_captioned_icon_svg_height">55dp</dimen>
     <dimen name="centered_captioned_icon_svg_width">63dp</dimen>
