--- a/project/res/values-sw600dp-port/dimens.xml
+++ b/project/res/values-sw600dp-port/dimens.xml
@@ -26,6 +26,7 @@
     <fraction name="results_grid_half_bottom_half">30%</fraction>
 
     <!-- Hotel details -->
+    <dimen name="hotel_header_height">240dp</dimen>
     <dimen name="tablet_hotel_details_top_padding">36dp</dimen>
     <fraction name="tablet_hotel_details_horizontal_spacing_percentage">8%</fraction>
 
