3010: Don't use janky system animations
They were not setting the fill properties correctly on the Nexus 5 so I
just used our internal ones and fixed them up.

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -375,8 +375,8 @@
     </style>
 
     <style name="FlightSearchOverlayAnimationStyle">
-        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
-        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
 
     <style name="FlightFilterDialogTheme" parent="@android:style/Theme.Dialog">
