--- a/project/res/anim/fade_out.xml
+++ b/project/res/anim/fade_out.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <alpha xmlns:android="http://schemas.android.com/apk/res/android"
-	android:interpolator="@android:anim/accelerate_decelerate_interpolator" 
- 	android:fromAlpha="1.0" 
- 	android:toAlpha="0.0" 
- 	android:duration="@integer/sort_filter_animation_duration"/>
+	android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+ 	android:fromAlpha="1.0"
+    android:toAlpha="0.0"
+    android:duration="300"
+    android:fillEnabled="true"
+    android:fillBefore="true"
+    android:fillAfter="true" />
