--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -5,33 +5,45 @@
 
     <!-- Overview of all checkout information: logged in user, travelers, payment -->
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="@integer/tablet_checkout_forms_left_margin_weight" />
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
             <LinearLayout
-                android:id="@+id/checkout_forms_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
-                android:paddingRight="@dimen/tablet_checkout_form_padding_x">
+                android:orientation="vertical">
 
-                <!-- TabletCheckoutFormsFragment builds the checkout forms inside here, dynamically -->
+                <LinearLayout
+                    android:id="@+id/checkout_forms_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
+                    android:paddingRight="@dimen/tablet_checkout_form_padding_x">
 
+                    <!-- TabletCheckoutFormsFragment builds the checkout forms inside here, dynamically -->
+
+                </LinearLayout>
+
+                <com.expedia.bookings.widget.SizeCopyView
+                    android:id="@+id/slide_container_size_copy_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp" />
             </LinearLayout>
-
-            <com.expedia.bookings.widget.SizeCopyView
-                android:id="@+id/slide_container_size_copy_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp" />
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
 
     <!-- Overlay for editing of a single checkout form: travelers, payment -->
 
@@ -51,8 +63,8 @@
             android:id="@+id/overlay_content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp">
+            android:layout_marginLeft="@dimen/tablet_checkout_data_form_margin_x"
+            android:layout_marginRight="@dimen/tablet_checkout_data_form_margin_x">
 
             <FrameLayout
                 android:id="@+id/traveler_form_container"
