--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -152,6 +152,7 @@
     <dimen name="trip_bucket_swipe_out_distance_half">24dp</dimen>
     <dimen name="trip_bucket_sold_out_container_padding">2dp</dimen>
     <dimen name="trip_bucket_sold_out_container_padding_bottom">6dp</dimen>
+    <dimen name="trip_bucket_undo_bar_width">265dp</dimen>
 
     <!-- Checkout -->
     <dimen name="slide_to_purchase_container_height">136dp</dimen>
